# backend/internal/dto/model_req_create_comment.go
@@ -1,0 +1,15 @@
+/*
+ * Modular JWT Authenticated API
+ *
+ * An example API using JWT imported from a separate file.
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package dto
+
+type ReqCreateComment struct {
+
+	Content string `json:"content"`
+}
